# kde-xopp-thumbnailer

./: CMakeLists.txt  README.md  xoppthumbnailer.cpp  xoppthumbnailer.desktop  xoppthumbnailer.h
